<resources>
    <string name="app_name">zufffinalyear</string>
    <string name="home_icon">Home icon</string>
    <string name="login">Login</string>
    <string name="register">Sign Up</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="confirm_hint">Confirm Password</string>
    <string name="finance">Finance</string>
    <string name="pig_breeds">PIG BREEDS</string>
    <string name="health">Health</string>
    <string name="farm_role">FARM ROLE</string>
    <string name="how_pig_was_obtained">Select how pig was obtained</string>
    <string name="date_format">%1$d/%2$d/%3$d</string>
    <string name="Reason_for_archiving">Reason For Archiving</string>
    <string-array name="pig_breeds_list">
        <item>Landrace</item>
        <item>Large White</item>
        <item>Duroc</item>
        <item>Hybrid Gilt</item>
        <item>Hampshire</item>
    </string-array>
    <string-array name="Reason_for_archiving_list">
        <item>Lost Pig</item>
        <item>Dead Pig</item>
        <item>Other</item>
    </string-array>
    <string-array name="filter_options">
        <item>Last 7 Days</item>
        <item>Current Month</item>
        <item>Previous Month</item>
        <item>Last 3 Months</item>
        <item>Last 6 Months</item>
        <item>Last 12 Months</item>
        <item>Current Year</item>
        <item>Previous Year</item>
        <item>Last 3 Years</item>
        <item>Last 6 Years</item>
        <item>All Time</item>
    </string-array>
    <string-array name="gender_list">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="farm_role_list">
        <item>Farm Manager</item>
        <item>Farm Owner</item>
    </string-array>
    <string-array name="pig_was_obtained_list">
        <item>Born on farm</item>
        <item>Purchased</item>
        <item>Other</item>
    </string-array>
    <string-array name="pig_group_list">
        <item>Boars</item>
        <item>Sows</item>
        <item>Gilts</item>
        <item>Weaners</item>
        <item>Barrows</item>
        <item>Piglet</item>
        <item>Pregnant</item>
        <item>Lactating</item>
        <item>Not Lactating</item>
    </string-array>
    <string name="pig_group">Pig Group</string>
    <string name="already_registered">Already Registered, Sign In!</string>
    <string name="username_hint">Username</string>
    <string name="no_account_message">Don’t have an account? Register here.</string>
    <string name="ipigs">Ipigs</string>
    <string name="save">Save pig</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="Tag_no">Tag no.*</string>
    <string name="Litter_no">Litter No.</string>
    <string name="Mothers_tag_no">Mother’s Tag No</string>
    <string name="Fathers_tag_no">Father’s Tag No</string>
    <string name="weight">Weight(kg)</string>
    <string name="pigs_offspring">Pig’s offspring</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="Date_of_entry_on_the_farm">Date of entry on the farm.</string>
    <string name="Pigs">Pigs</string>
    <string name="Feeds">Feeds</string>
    <string name="Events">Events</string>
    <string name="Transaction">Transaction</string>
    <string name="Farm_setup">Farm setup</string>
    <string name="Reports">Reports</string>
    <string name="Additions">Additions</string>
    <string name="Reductions">Reductions</string>
    <string name="home">Home</string>
    <string name="gender">Gender</string>
    <string name="logout">Logout</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_pig">Add pig</string>
    <string name="tag_no">Tag No</string>
    <string name="farm_names">Farm Name</string>
    <string name="farm_name">Farm Name: %s</string>
    <string name="forgotpassword">Forgot password?</string>
    <string name="sales">SALES</string>
    <string name="add_feeds">ADDITIONS</string>
    <string name="reduce_feeds">Reduction</string>
    <string name="add_pigfeeds">Add Feed</string>
    <string name="reduce_pigfeeds">Reduce Feed</string>
    <string name="expense">EXPENSE</string>
    <string name="massevents">MASS EVENTS</string>
    <string name="individualevents">INDIVIDUAL EVENTS</string>
    <string name="breed_count">%s: %d</string>
    <string name="age">Age</string>
    <string name="colon">:</string>
    <string name="sell">Sell</string>
    <string name="sellpig">Sell Pigs</string>
    <string name="remove">Remove</string>
    <string name="Currentpigprice">Current Pig Market Price (Ksh)</string>
    <string name="Predictedpigprice">Predicted Market Price (Ksh)</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="Description">Description</string>
    <string name="Amount">Amount</string>
    <string name="Date">Date</string>
    <string name="equals">=</string>
    <string name="total_sales_label">Total Sales:</string>
    <string name="total_income">0.00</string>
    <string name="refresh">Refresh</string>
    <string name="Details">Details</string>
    <string name="general_details">General details</string>
    <string name="breedinginsights">Breeding Insights</string>
    <string name="insemination">Insemination</string>
    <string name="abortions">Abortions</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="past_events">Past Events</string>
    <string name="Update">Update Pig</string>
    <string name="date_of_event">Date of Event</string>
    <string name="notes">Notes</string>
    <string name="archive">Archive</string>
    <string name="tag_no_">Tag No</string>
    <string name="Add_Stall">Add Stall</string>
    <string name="Stall_No">Stall No</string>
    <string name="save_group">Save Group</string>
    <string name="No_of_pigs">No of Pigs</string>
    <string name="mean_weight">Mean weight</string>
    <string name="total_expenselabel">Total Expenses</string>
    <string name="addEvent">Add Events</string>
    <string name="Continue">Continue</string>
    <string name="feeding">Feeding</string>
    <string name="Select_Type_of_Feed">Select type of Feed</string>
    <string-array name="Feed_list">
        <item>Creep Feed</item>
        <item>Weaner Feed</item>
        <item>Grower Feed</item>
        <item>Finisher</item>
    </string-array>
    <string-array name="Reason_for_reducing_list">
        <item>Spoilt/Expired</item>
        <item>Lost/Stolen</item>
        <item>Other</item>
        <item>Consumed</item>
    </string-array>
    <string name="Date_of_purchased">Date of Purchase</string>
    <string name="Reason_for_reducing">Reason for reducing</string>
    <string name="quantity_reduced">Quantity reduced in kgs</string>
    <string name="cost_of_feeds_reduced">Cost of Feeds Reduced per kg</string>
    <string name="Date_of_Reduction">Date of Reduction</string>
    <string name="add_reduction">Reduction</string>
    <string name="add_feed">Add Feed</string>
    <string name="quantity">Quantity added in kgs</string>
    <string name="cost_of_feeds_added">Cost of feeds Added per kg</string>
    <string name="cost_per_kg">Cost per kg</string>
    <string name="cost_of_feeds">Cost of Feeds</string>
</resources>
