<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/yellow"
    android:padding="16dp">
    <ImageView
        android:id="@+id/imageIcon"
        android:layout_marginTop="30dp"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:src="@drawable/pigs"
        android:contentDescription="@string/home_icon"/>
    <TextView
        android:id="@+id/farm_name_text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/farm_name"/>
    <TextView
        android:id="@+id/email_text"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/email_hint"/>
</LinearLayout>
