<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    android:gravity="center"
    android:orientation="vertical"
 >

    <ImageView
        android:id="@+id/imageIcon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:contentDescription="@string/home_icon"
        android:src="@drawable/homepage"/>

    <TextView
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/light_colorBackground"
        android:elevation="10dp"
        app:cardCornerRadius="20dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:textColorHint="@color/black"
                app:hintTextColor="@color/green"
                app:boxStrokeColor="@color/black"
                android:padding="20dp"
                app:boxStrokeWidth="1dp"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                app:cursorColor="@color/black">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    app:strokeColor="@color/green"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordInputLayout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:padding="20dp"
                android:textColorHint="@color/black"
                app:hintTextColor="@color/green"
                app:boxStrokeColor="@color/green"
                app:boxStrokeWidth="1dp"
                app:cursorColor="@color/black"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/forgotpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/forgotpassword"
                android:textColor="@color/black"
                android:textSize="15sp"/>
            <Button
                android:id="@+id/welcome"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/yellow"
                android:text="@string/register"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/registerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/no_account_message"
                android:textColor="@color/black"
                android:textSize="15sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
