<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/autoCompleteTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="15dp"
            app:boxStrokeColor="@color/green"
            app:boxStrokeWidth="1dp"
            app:hintTextColor="@color/green"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/pig_breeds"
                android:inputType="none"
                android:backgroundTint="@color/light_colorBackground"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tagNoInputLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="15dp"
            android:hint="@string/Tag_no"
            android:textColorHint="@color/black"
            app:hintTextColor="@color/green"
            app:boxStrokeColor="@color/green"
            app:boxStrokeWidth="1dp"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            app:cursorColor="@color/black">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tagNoEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                app:strokeColor="@color/green"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/litterLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="15dp"
            android:hint="@string/Litter_no"
            android:textColorHint="@color/black"
            app:hintTextColor="@color/green"
            app:boxStrokeColor="@color/green"
            app:boxStrokeWidth="1dp"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            app:cursorColor="@color/black">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/litterEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                app:strokeColor="@color/green"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/weightInputLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="15dp"
            android:hint="@string/weight"
            android:textColorHint="@color/black"
            app:hintTextColor="@color/green"
            app:boxStrokeColor="@color/green"
            app:boxStrokeWidth="1dp"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            app:cursorColor="@color/black">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/weightEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                app:strokeColor="@color/green"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/autoCompletegenderTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="15dp"
            app:boxStrokeColor="@color/green"
            app:boxStrokeWidth="1dp"
            app:hintTextColor="@color/green"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
            <AutoCompleteTextView
                android:id="@+id/autoCompletegenderTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/light_colorBackground"
                android:inputType="none"
                android:text="@string/gender"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dateofbirthInputLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="15dp"
            android:hint="@string/date_of_birth"
            android:textColorHint="@color/black"
            app:hintTextColor="@color/green"
            app:boxStrokeColor="@color/green"
            app:boxStrokeWidth="1dp"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            app:cursorColor="@color/black">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dateofbirthEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                app:strokeColor="@color/green"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dateofentryInputLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="15dp"
            android:hint="@string/Date_of_entry_on_the_farm"
            android:textColorHint="@color/black"
            app:hintTextColor="@color/green"
            app:boxStrokeColor="@color/green"
            app:boxStrokeWidth="1dp"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            app:cursorColor="@color/black">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dateofentryEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                app:strokeColor="@color/green"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/motherstagInputLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="15dp"
            android:hint="@string/Mothers_tag_no"
            android:textColorHint="@color/black"
            app:hintTextColor="@color/green"
            app:boxStrokeColor="@color/green"
            app:boxStrokeWidth="1dp"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            app:cursorColor="@color/black">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/motherstagEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                app:strokeColor="@color/green"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fathersstagInputLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="15dp"
            android:hint="@string/Fathers_tag_no"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/green"
            app:cursorColor="@color/black"
            app:hintTextColor="@color/green">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fatherstagEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:textStyle="bold"
            android:textColor="@color/light_colorBackground"
            android:layout_gravity="center"
            android:id="@+id/save_button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:text="@string/save"
            android:backgroundTint="@color/green"/>
    </LinearLayout>
</ScrollView>
