<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/light_colorBackground"
    app:cardCornerRadius="8dp"
    android:layout_margin="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginVertical="6dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/PigBreedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pig_breeds"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="8dp"/>
            <TextView
                android:id="@+id/PigBreedTextView"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pig_breeds"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tagNoLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Tag_no"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="8dp"/>
            <TextView
                android:id="@+id/tagNoTextView"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Tag_no"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/ageLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="8dp"/>
            <TextView
                android:id="@+id/ageTextView"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
       <Button
           android:id="@+id/buttonSell"
           android:layout_width="150dp"
           android:layout_height="match_parent"
           android:text="@string/sell"
           android:backgroundTint="@color/green"
           android:textColor="@color/light_colorBackground"
           android:textSize="16sp"
           android:onClick="onSellButtonClick"
           android:layout_marginEnd="10dp"/>
            <Button
                android:id="@+id/buttonArchive"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/green"
                android:textColor="@color/light_colorBackground"
                android:text="@string/archive"
                android:onClick="onRemoveButtonClick"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>