<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="30dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    android:backgroundTint="@color/light_colorBackground">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Currentpigprice"
            android:textColorHint="@color/black"
            app:hintTextColor="@color/green"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="1dp"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            app:cursorColor="@color/black">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/priceEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:textColor="@color/black"
                app:strokeColor="@color/green"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">
            <Button
                android:id="@+id/buttonConfirm"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/green"
                android:textColor="@color/light_colorBackground"
                android:text="@string/confirm" />
            <Button
                android:id="@+id/buttonCancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/green"
                android:textColor="@color/light_colorBackground"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
